[metadata]
name = dbrew
version = 0.0.3
description = Brew and orchestrate your data products seamlessly into actionable deployments with DBrew, the CLI tool tailored for modern data maestros.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/somasays/dbrew
author = Somasundaram S
author_email = "Somasundaram S" <somasundaram@outlook.com>
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    pydantic>=2.4.2
    pyyaml>=6.0.1
    click>=8.1.7

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    dbrew = dbrew.client.cli:cli

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True
ignore_missing_imports = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = dbrew
branch = True

[coverage:report]
fail_under = 100
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/dbrew
    */site-packages/dbrew

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    pytest-mock
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:src test}

[testenv:build]
deps =
    build
commands =
    python -m build

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}

[testenv:check]
deps =
    black
    flake8
    flake8-bugbear
    # mypy
commands =
    black --check --diff src test
    flake8 src test
    # mypy --ignore-missing-imports src test



[testenv:publish]
deps =
    build
    twine
commands =
    python -m build --sdist --wheel
    twine upload dist/*
setenv =
    TWINE_USERNAME = {env:TWINE_USERNAME:__token__}
    TWINE_PASSWORD = {env:TWINE_PASSWORD}

[testenv:docs]
deps =
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/dbrew/ \
        src/dbrew/*.c \
        src/dbrew/*.so
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[testenv:devdocs]
deps =
    sphinx
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/dbrew/ \
        src/dbrew/*.c \
        src/dbrew/*.so
    sphinx-autobuild -n -W -b html docs/ docs/_build/
